--- a/index.html
+++ b/index.html
@@ -7,42 +7,44 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-     <div class="top-bar">
-        <div class="user-info">
-            <div class="image-box">
-              <img src="img/kumar.jpg" alt="" />  
-            </div>
-            <div class="text-box">
-              <p>Rajit Kumar</p>
-              <small>Last seen 12:00</small>
+    <div class="top-bar">
+      <div class="user-info">
+        <div class="image-box">
+          <img src="img/kumar.jpg" alt="" />
+        </div>
+        <div class="text-box">
+          <p>Rajit Kumar</p>
+          <small>Last seen 12:00</small>
+        </div>
+      </div>
+    </div>
+    <div class="sidebar">
+      <input
+        type="search"
+        name="search"
+        id=""
+        placeholder="Search for Contacts"
+      />
+      <select>
+        <option>Setting</option>
+        <option><a href="login.html">LogOut</a></option>
+        <option></option>
+      </select>
+      <div class="contact-list">
+        <div class="contact">
+          <img src="img/kumar.jpg" alt="" />
+          <div class="pesan">
+            <h2>Rajit Kumar</h2>
+            <p>Hey How are you?</p>
           </div>
         </div>
       </div>
+    </div>
     <div class="content">
-      <div class="sidebar">
-        <div class="search-bar">
-          <input
-            type="search"
-            name="search"
-            id=""
-            placeholder="Search for Contacts"
-          />
-          <div class="contact-list">
-            <div class="contact">
-              <div class="contact001 active">
-                <img src="img/kumar.jpg" alt="" />
-                <h2>Rajit Kumar</h2>
-                <p>Hey How are you?</p>
-                <i class="fas fa circle">Notif</i>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
       <div class="chat-box">
         <div class="chat-date"></div>
         <div class="message-box">
-          <img src="img/kumar.jpg">
+          <img src="img/kumar.jpg" />
           <h4>Rajit Kumar</h4>
           <p>Hey How are you? <small>12:00</small></p>
         </div>
