--- a/index.html
+++ b/index.html
@@ -47,19 +47,25 @@
     <div class="chat-box">
       <div class="message-box">
         <div class="chat-date">
-          <p>25/10/2023</p>
+          <p>25 October 2023</p>
         </div>
-        <div class="message">
-          <div class="msg-img-box">
-            <img src="img/kumar.jpg" alt="" />
+          <div class="message">
+            <div class="msg-img-box">
+              <img src="img/kumar.jpg" alt="" />
+            </div>
+            <div class="msg-text-box">
+              <p class="ingoing">
+                Hey How are you? <small class="time">12:00</small>
+              </p>
+            </div>
           </div>
-          <div class="msg-text-box">
-            <p>Rajit Kumar</p>
-            <p class="bubble">
-              Hey How are you? <small class="time">12:00</small>
-            </p>
+          <div class="message">
+            <div class="msg-text-box">
+              <p class="outgoing">
+                Im fine, hbu? <small class="time">12:04</small>
+              </p>
+            </div>
           </div>
-        </div>
       </div>
       <div class="message-input-box">
         <input type="text" name="message" id="" placeholder="Type here" />
