--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="image-box">
           <img src="img/kumar.jpg" alt="" />
         </div>
-        <div class="text-box">
+        <div class="text-box chat">
           <p>Rajit Kumar</p>
           <small>Last seen 12:00</small>
         </div>
@@ -42,6 +42,126 @@
           </div>
           <small style="top: 0">12:00</small>
         </div>
+        <div class="contact">
+          <div class="msg-img-box">
+            <img src="img/kumar.jpg" alt="" />
+          </div>
+          <div class="pesan">
+            <h4>Rajit Kumar</h4>
+            <p>Hey How are you?</p>
+          </div>
+          <small style="top: 0">12:00</small>
+        </div>
+        <div class="contact">
+          <div class="msg-img-box">
+            <img src="img/kumar.jpg" alt="" />
+          </div>
+          <div class="pesan">
+            <h4>Rajit Kumar</h4>
+            <p>Hey How are you?</p>
+          </div>
+          <small style="top: 0">12:00</small>
+        </div>
+        <div class="contact">
+          <div class="msg-img-box">
+            <img src="img/kumar.jpg" alt="" />
+          </div>
+          <div class="pesan">
+            <h4>Rajit Kumar</h4>
+            <p>Hey How are you?</p>
+          </div>
+          <small style="top: 0">12:00</small>
+        </div>
+        <div class="contact">
+          <div class="msg-img-box">
+            <img src="img/kumar.jpg" alt="" />
+          </div>
+          <div class="pesan">
+            <h4>Rajit Kumar</h4>
+            <p>Hey How are you?</p>
+          </div>
+          <small style="top: 0">12:00</small>
+        </div>
+        <div class="contact">
+          <div class="msg-img-box">
+            <img src="img/kumar.jpg" alt="" />
+          </div>
+          <div class="pesan">
+            <h4>Rajit Kumar</h4>
+            <p>Hey How are you?</p>
+          </div>
+          <small style="top: 0">12:00</small>
+        </div>
+        <div class="contact">
+          <div class="msg-img-box">
+            <img src="img/kumar.jpg" alt="" />
+          </div>
+          <div class="pesan">
+            <h4>Rajit Kumar</h4>
+            <p>Hey How are you?</p>
+          </div>
+          <small style="top: 0">12:00</small>
+        </div>
+        <div class="contact">
+          <div class="msg-img-box">
+            <img src="img/kumar.jpg" alt="" />
+          </div>
+          <div class="pesan">
+            <h4>Rajit Kumar</h4>
+            <p>Hey How are you?</p>
+          </div>
+          <small style="top: 0">12:00</small>
+        </div>
+        <div class="contact">
+          <div class="msg-img-box">
+            <img src="img/kumar.jpg" alt="" />
+          </div>
+          <div class="pesan">
+            <h4>Rajit Kumar</h4>
+            <p>Hey How are you?</p>
+          </div>
+          <small style="top: 0">12:00</small>
+        </div>
+        <div class="contact">
+          <div class="msg-img-box">
+            <img src="img/kumar.jpg" alt="" />
+          </div>
+          <div class="pesan">
+            <h4>Rajit Kumar</h4>
+            <p>Hey How are you?</p>
+          </div>
+          <small style="top: 0">12:00</small>
+        </div>
+        <div class="contact">
+          <div class="msg-img-box">
+            <img src="img/kumar.jpg" alt="" />
+          </div>
+          <div class="pesan">
+            <h4>Rajit Kumar</h4>
+            <p>Hey How are you?</p>
+          </div>
+          <small style="top: 0">12:00</small>
+        </div>
+        <div class="contact">
+          <div class="msg-img-box">
+            <img src="img/kumar.jpg" alt="" />
+          </div>
+          <div class="pesan">
+            <h4>Rajit Kumar</h4>
+            <p>Hey How are you?</p>
+          </div>
+          <small style="top: 0">12:00</small>
+        </div>
+        <div class="contact">
+          <div class="msg-img-box">
+            <img src="img/kumar.jpg" alt="" />
+          </div>
+          <div class="pesan">
+            <h4>Rajit Kumar</h4>
+            <p>Hey How are you?</p>
+          </div>
+          <small style="top: 0">12:00</small>
+        </div>
       </div>
     </div>
     <div class="chat-box">
@@ -49,23 +169,28 @@
         <div class="chat-date">
           <p>25 October 2023</p>
         </div>
-          <div class="message">
+        <div class="message">
+          <div class="ingoing-msg">
             <div class="msg-img-box">
               <img src="img/kumar.jpg" alt="" />
             </div>
             <div class="msg-text-box">
               <p class="ingoing">
-                Hey How are you? <small class="time">12:00</small>
+                Hey How are you? My name is Rajit kumar
+                <small class="time">12:00</small>
               </p>
             </div>
           </div>
-          <div class="message">
-            <div class="msg-text-box">
-              <p class="outgoing">
-                Im fine, hbu? <small class="time">12:04</small>
-              </p>
-            </div>
+        </div>
+        <div class="message" id="outgoing">
+          <div class="msg-text-box" id="outgoing-box">
+            <p class="outgoing">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam
+              eaque odit quas?
+              <small class="time">12:04</small>
+            </p>
           </div>
+        </div>
       </div>
       <div class="message-input-box">
         <input type="text" name="message" id="" placeholder="Type here" />
